<resources>
    <string name="app_name">Caremap</string>

    <string name="empty_field_error">%1$s field must not be empty</string>
    <string name="min_field_exp">%1$s must be between 0-100</string>
    <string name="min_field_phone">%1$s field must equal 10 digits</string>
    <string name="hourly_rate">Hourly wage</string>
    <string name="age">Age</string>
    <string name="exp">Year of experience</string>
    <string name="min_field_wage">%1$s must equal digits between 0-200</string>
    <string name="min_field_error">%1$s must equal a combination of 6 characters letters and numbers</string>

    <string name="minimum_field_error">min 35 characters with a 50 characters max required</string>
    <string name="match_password">%1$s does not match</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_brith">Date of Brith</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Marketplace</string>
    <string name="title_dashboard">Messages</string>
    <string name="title_notifications">Profile</string>


    <string name="name">Name</string>
    <string name="enter_valid_address">Please enter valid email address.</string>
    <string name="camera_select_option">Edit Profile Picture</string>
    <string name="camera_take_photo">Take Photo</string>
    <string name="camera_cancel">Cancel</string>
    <string name="camera_gallery">Choose From Gallery</string>
    <string name="error_some_thing_went_wrong">Some Thing Went Wrong</string>
    <string name="email_field_error">%1$s address is not valid</string>
    <string name="emergency_number">Emergency Cell</string>
    <string name="number">Number</string>
    <string name="unit_number">Unit Number</string>
    <string name="connectivity_msg">Please check your internet connection.</string>
    <string name="loading">Loading...</string>
    <string name="com.crashlytics.android.build_id">RANDOM_UUID</string>

    <string name="gps_network_not_enabled">Please enable location.</string>
    <string name="open_location_settings">Location Settings</string>
    <string name="cancel">Cancel</string>
</resources>
