<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="profileModel"
            type="com.square63.caremap.models.seekerModels.CreateSeekerProfileModel"></variable>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.providerModule.CreateProviderProfileActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/colored_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <com.square63.caremap.utils.CircleImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="@dimen/x60"
                        android:layout_height="@dimen/x60"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:onClick="onPickImageClick"
                        android:src="@drawable/profile_default" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/x8"
                        android:layout_marginTop="@dimen/x8"
                        android:text="Add Photo"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    style="@style/profile_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x8"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fName"
                            style="@style/generic_text_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/first_name" />

                        <EditText
                            android:id="@+id/txtFirstName"
                            style="@style/edit_text_style_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:paddingStart="5dp"
                            android:background="@null"
                            android:hint=""
                            android:text="@={profileModel.firstName}" />
                    </LinearLayout>

                    <View
                        android:layout_width="1px"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/grey_background" />

                    <LinearLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/lName"
                            style="@style/generic_text_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/last_name" />

                        <EditText

                            android:id="@+id/edtLastName"
                            style="@style/edit_text_style_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:background="@null"
                            android:hint=""
                            android:text="@={profileModel.lastName}" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"

                    android:layout_height="1dp"
                    android:layout_marginEnd="21dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="7dp"

                    android:background="@color/grey_background" />

                <LinearLayout

                    style="@style/profile_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pNumber"
                        style="@style/generic_text_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/phone_number" />

                    <EditText
                        android:id="@+id/edtPhone"
                        style="@style/edit_text_style_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        
                        android:hint=""
                        android:inputType="numberDecimal"
                        android:text="@={profileModel.phoneNumber}" />
                </LinearLayout>

                <LinearLayout

                    style="@style/profile_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtEmergencyNumber"
                        style="@style/generic_text_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/emergency_number" />

                    <EditText
                        android:id="@+id/edtEmergencyNumber"
                        style="@style/edit_text_style_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        
                        android:hint=""
                        android:inputType="number"
                        android:text="@={profileModel.emergencyNumber}" />
                </LinearLayout>

                <LinearLayout
                    style="@style/profile_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/number"
                            style="@style/generic_text_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/number" />

                        <EditText
                            android:id="@+id/txtNumber"
                            style="@style/edit_text_style_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:background="@null"
                            android:hint=""
                            android:inputType="number"
                            android:text="@={profileModel.number}" />
                    </LinearLayout>

                    <View
                        style="@style/line_style"
                        android:layout_width="1px"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp" />

                    <LinearLayout

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/unitNumber"
                            style="@style/generic_text_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/unit_number" />

                        <EditText

                            android:id="@+id/edtUnitNumber"
                            style="@style/edit_text_style_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            
                            android:layout_marginStart="5dp"
                            android:background="@null"
                            android:hint=""
                            android:inputType="number"
                            android:text="@={profileModel.unitNumber}" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"

                    android:layout_height="1dp"
                    android:layout_marginEnd="21dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="7dp"

                    android:background="@color/grey_background" />

                <LinearLayout

                    style="@style/profile_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/street"
                        style="@style/generic_text_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="Street" />

                    <EditText
                        android:id="@+id/edtStreet"
                        style="@style/edit_text_style_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        
                        android:hint=""
                        android:text="@={profileModel.city}" />
                </LinearLayout>


                <LinearLayout

                    style="@style/profile_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/city"
                        style="@style/generic_text_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/city" />

                    <EditText
                        android:id="@+id/edtCity"
                        style="@style/edit_text_style_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        
                        android:hint=""
                        android:text="@={profileModel.city}" />
                </LinearLayout>

                <LinearLayout

                    style="@style/profile_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/province"
                        style="@style/generic_text_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/province" />

                    <EditText
                        android:id="@+id/edtProvince"
                        style="@style/edit_text_style_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        
                        android:hint=""
                        android:text="@={profileModel.province}" />
                </LinearLayout>

                <LinearLayout

                    style="@style/profile_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/addres1"
                        style="@style/generic_text_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="Postal Code" />

                    <EditText
                        android:id="@+id/edtAddress1"
                        style="@style/edit_text_style_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        
                        android:hint=""
                        android:text="@={profileModel.address1}" />
                </LinearLayout>

                <LinearLayout

                    style="@style/profile_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/generic_text_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/address_2" />

                    <EditText
                        android:id="@+id/edtAddress2"
                        style="@style/edit_text_style_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        
                        android:hint=""
                        android:text="@={profileModel.address2}" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>